--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "16.2.0",
     "react-native": "0.54.2",
     "react-native-linear-gradient": "^2.5.3",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.0.1",
     "react-navigation-redux-helpers": "^1.1.1",
     "react-redux": "^5.0.7",
