--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.54.2",
+    "react-native-navigation": "1.1.277",
     "react-native-linear-gradient": "^2.5.3",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.0.1",
